Add convenience script, enable -Werror, remove __attribute__((unused))
I always forget to remove the attribute anyways, so it's probably
better just to disable the warning, since that was the only thing
keeping me from enabling -Werror.

--- a/meson.build
+++ b/meson.build
@@ -49,7 +49,7 @@ executable(
   sources: agent_files,
   dependencies: [libmicrohttpd, libdbus, libfsautomata],
   install: true,
-  c_args: ['-Wall', '-Wextra'],
+  c_args: ['-Wall', '-Wextra', '-Werror', '-Wno-unused-parameter'],
 )
 
 # Install dbus policy
