Completely throw everything away
This commit marks the start of re-implementing basically everything
using libev instead of attempting to write my own event loop.

--- a/dbus-1/bluez-iot-agent.conf
+++ b/dbus-1/bluez-iot-agent.conf
@@ -9,11 +9,11 @@
   <!-- ../system.conf have denied everything, so we just punch some holes -->
 
   <policy user="root">
-    <allow own="org.soundsystem.agent"/>
+    <allow own="org.bluez.iot-agent"/>
   </policy>
 
   <policy context="default">
-    <allow send_destination="org.soundsystem.agent"/>
+    <allow send_destination="org.bluez.iot-agent"/>
   </policy>
 
 </busconfig>
