--- a/config.h.in
+++ b/config.h.in
@@ -7,7 +7,7 @@
 //
 // CREATED:         11/17/2021
 //
-// LAST EDITED:     11/28/2021
+// LAST EDITED:     11/29/2021
 //
 // Copyright 2021, Ethan D. Twardy
 //
@@ -30,7 +30,7 @@
 #define CONFIG_SERVICE_NAME "org.bluez.iot-agent"
 #define CONFIG_OBJECT_PATH "/org/bluez/agent"
 #define CONFIG_WEB_SERVER_PORT 8888
-#define CONFIG_WEBROOT_PATH "/usr/share/bluez-iot-agent"
+#define CONFIG_WEBROOT_PATH "@webroot_path@"
 #define CONFIG_AGENT_CAPABILITY "NoInputNoOutput"
 #define CONFIG_ADAPTER_PATH_PREFIX "/org/bluez"
 
